# GenomicsDB

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  NOTES  README.md  doxyfile.inc  pom.xml  requirements.txt
example/: CMakeLists.txt
example/include/: libtiledb.h  vcfdiff.h
example/java/: ExampleGenomicsDBImporter.java  TestBufferStreamGenomicsDBImporter.java  TestBufferStreamVCF2TileDB.java  TestGenomicsDB.java  TestGenomicsDBImporterWithMergedVCFHeader.java  TestGenomicsDBSparkHDFS.java
example/java/test_genomicsdb_jar/: build.gradle  settings.gradle
example/src/: create_tiledb_workspace.cc  example_ga4gh_scan_operator.cc  example_libtiledb_variant_driver.cc  gt_example_loader.cc  gt_example_query_processor.cc  gt_mpi_gather.cc  gt_profile_query_processor.cc  gt_verifier.cc  libtiledb.cc  test_genomicsdb_bcf_generator.cc  test_genomicsdb_importer.cc  test_jni_bcf_reader.cc  test_mapping_data_loader.cc  test_metadata_loader.cc  vcf2tiledb.cc  vcf_histogram.cc  vcfdiff.cc
src/: CMakeLists.txt
src/genomicsdb/: genomicsdb_columnar_field.cc  genomicsdb_iterators.cc  query_variants.cc  variant.cc  variant_array_schema.cc  variant_cell.cc  variant_field_data.cc  variant_field_handler.cc  variant_query_config.cc  variant_storage_manager.cc
src/java/: CMakeLists.txt
src/java/JNI/include/: genomicsdb_GenomicsDBQueryOutputStream.h  genomicsdb_GenomicsDBQueryStream.h  genomicsdb_GenomicsDBUtils.h  genomicsdb_VCF2TileDB.h  jni_mpi_init.h
src/java/JNI/src/: genomicsdb_GenomicsDBQueryOutputStream.cc  genomicsdb_GenomicsDBQueryStream.cc  genomicsdb_VCF2TileDB.cc  genomicsdb_jni_init.cc
src/java/genomicsdb/: GenomicsDBException.java  GenomicsDBFeatureReader.java  GenomicsDBQueryOutputStream.java  GenomicsDBQueryStream.java  GenomicsDBUtils.java  VCF2TileDB.java  pom.xml
src/loader/: genomicsdb_importer.cc  load_operators.cc  tiledb_loader.cc  tiledb_loader_file_base.cc  tiledb_loader_text_file.cc
src/main/: CMakeLists.txt
src/main/cpp/include/config/: genomicsdb_config_base.h  json_config.h  variant_query_config.h
src/main/cpp/include/genomicsdb/: genomicsdb_columnar_field.h  genomicsdb_iterators.h  genomicsdb_jni_exception.h  genomicsdb_multid_vector_field.h  query_variants.h  variant.h  variant_array_schema.h  variant_cell.h  variant_field_data.h  variant_query_config.h  variant_storage_manager.h
src/main/cpp/include/loader/: column_partition_batch.h  genomicsdb_callsets_mapping.pb.h  genomicsdb_import_config.pb.h  genomicsdb_importer.h  genomicsdb_vid_mapping.pb.h  load_operators.h  tiledb_loader.h  tiledb_loader_file_base.h  tiledb_loader_text_file.h
src/main/cpp/include/protobuf/: genomicsdb_export_config.pb.h  genomicsdb_import_config.pb.h
src/main/cpp/include/query_operations/: broad_combined_gvcf.h  genomicsdb_export_config.pb.h  variant_operations.h
src/main/cpp/include/utils/: command_line.h  gt_common.h  headers.h  histogram.h  json_config.h  libtiledb_variant.h  lut.h  profiling.h  timer.h  vid_mapper.h  vid_mapper.pb.h  vid_mapper_pb.h  vid_mapper_sql.h
src/main/cpp/include/vcf/: genomicsdb_bcf_generator.h  known_field_info.h  vcf.h  vcf2binary.h  vcf_adapter.h
src/main/cpp/src/config/: genomicsdb_config_base.cc  json_config.cc  variant_query_config.cc
src/main/cpp/src/genomicsdb/: genomicsdb_columnar_field.cc  genomicsdb_iterators.cc  genomicsdb_multid_vector_field.cc  query_variants.cc  variant.cc  variant_array_schema.cc  variant_cell.cc  variant_field_data.cc  variant_field_handler.cc  variant_query_config.cc  variant_storage_manager.cc
src/main/cpp/src/loader/: genomicsdb_callsets_mapping.pb.cc  genomicsdb_import_config.pb.cc  genomicsdb_importer.cc  genomicsdb_vid_mapping.pb.cc  load_operators.cc  tiledb_loader.cc  tiledb_loader_file_base.cc  tiledb_loader_text_file.cc
src/main/cpp/src/query_operations/: broad_combined_gvcf.cc  genomicsdb_export_config.pb.cc  variant_operations.cc
src/main/cpp/src/utils/: command_line.cc  histogram.cc  json_config.cc  known_field_info.cc  libtiledb_variant.cc  lut.cc  memory_measure.cc  tiledb_utils.cc  timer.cc  vid_mapper.cc  vid_mapper_pb.cc  vid_mapper_sql.cc
src/main/cpp/src/vcf/: genomicsdb_bcf_generator.cc  vcf2binary.cc  vcf_adapter.cc
src/main/java/com/intel/genomicsdb/: ChromosomeInterval.java  Constants.java  GenomicsDBCallsetsMapProto.java  GenomicsDBConfiguration.java  (+22 more)
src/main/jni/include/: genomicsdb_GenomicsDBFeatureReader.h  genomicsdb_GenomicsDBImporter.h  genomicsdb_GenomicsDBLibLoader.h  genomicsdb_GenomicsDBQueryStream.h  genomicsdb_GenomicsDBUtils.h  jni_mpi_init.h
src/main/jni/src/: genomicsdb_GenomicsDBFeatureReader.cc  genomicsdb_GenomicsDBImporter.cc  genomicsdb_GenomicsDBQueryStream.cc  genomicsdb_GenomicsDBUtils.cc  genomicsdb_jni_init.cc
src/main/protobuf-generated/cpp/include/: genomicsdb_callsets_mapping.pb.h  genomicsdb_export_config.pb.h  genomicsdb_import_config.pb.h  genomicsdb_vid_mapping.pb.h
src/main/protobuf-generated/cpp/src/: genomicsdb_callsets_mapping.pb.cc  genomicsdb_export_config.pb.cc  genomicsdb_import_config.pb.cc  genomicsdb_vid_mapping.pb.cc
src/query_operations/: broad_combined_gvcf.cc  variant_operations.cc
src/resources/: CMakeLists.txt  gendb_fixed_dump.sql  gendb_state_for_tests.txt  genomicsdb-spark-submit.sh  genomicsdb_callsets_mapping.proto  genomicsdb_coordinates.proto  genomicsdb_export_config.proto  genomicsdb_import_config.proto  genomicsdb_vid_mapping.proto
src/test/: CMakeLists.txt
src/test/cpp/: test_mapping_data_loader.cc
src/test/cpp/include/: test_mapping_data_loader.h
src/test/cpp/include/loader/: genomicsdb_vid_mapping_pb_spec.h
src/test/cpp/src/: CMakeLists.txt  main_testall.cc  test_mapping_data_loader.cc  test_multid_vector.cc  test_non_diploid_mapper.cc
src/test/cpp/src/loader/: genomicsdb_vid_mapping_pb_spec.cc
src/utils/: command_line.cc  histogram.cc  json_config.cc  known_field_info.cc  libtiledb_variant.cc  lut.cc  memory_measure.cc  vid_mapper.cc
src/vcf/: genomicsdb_bcf_generator.cc  genomicsdb_importer.cc  jni_bcf_reader.cc  vcf2binary.cc  vcf_adapter.cc
(+553 files in other folders)
