function(build_GenomicsDB_example target)
    add_executable(${target} src/${target}.cc)
    target_link_libraries(${target} genomicsdb ${TILEDB_LIBRARY} ${HTSLIB_LIBRARY})
    if(LIBCSV_FOUND)
        target_link_libraries(${target} ${LIBCSV_LIBRARY})
    endif()
    target_link_libraries(${target} ${OPENSSL_LIBRARIES} ${ZLIB_LIBRARIES} ${LIBRT_LIBRARY})
    install(TARGETS ${target} RUNTIME DESTINATION bin)
endfunction()

include_directories("include")

if(NOT DISABLE_MPI)
    build_GenomicsDB_example(create_tiledb_workspace)
    build_GenomicsDB_example(example_ga4gh_scan_operator)
    build_GenomicsDB_example(example_libtiledb_variant_driver)
    build_GenomicsDB_example(gt_example_query_processor)
    build_GenomicsDB_example(gt_mpi_gather)
    build_GenomicsDB_example(gt_profile_query_processor)
    build_GenomicsDB_example(gt_verifier)
    build_GenomicsDB_example(test_jni_bcf_reader)
    build_GenomicsDB_example(vcf2tiledb)
    build_GenomicsDB_example(vcfdiff)
    build_GenomicsDB_example(vcf_histogram)
endif()
